heading animatin bug fix! popup section alignments bug fix!

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -77,6 +77,7 @@ body {
     transform: translateY(0); } }
 
 body {
+  animation-fill-mode: forwards;
   text-align: center;
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -88,6 +89,7 @@ body {
       padding: 0; } }
 
 .heading-primary {
+  animation-fill-mode: forwards;
   text-align: center;
   color: #fff;
   text-transform: uppercase;
@@ -100,7 +102,6 @@ body {
       letter-spacing: 1rem;
       font-size: 5rem; } }
   .heading-primary--main {
-    margin-left: 1.5rem;
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -260,7 +261,7 @@ body {
 
 .btn-center {
   position: absolute;
-  left: 30%;
+  left: 0;
   margin-bottom: 2rem;
   text-align: center; }
 
@@ -665,20 +666,10 @@ body {
     overflow: hidden;
     opacity: 0;
     transition: all .5s; }
-    @media only screen and (max-width: 37.5em) {
-      .popup__content {
-        display: inline-block; } }
   .popup__left {
     width: 33.3333%;
     display: table-cell;
     vertical-align: middle; }
-    @media only screen and (max-width: 37.5em) {
-      .popup__left {
-        display: inline-flex;
-        position: relative;
-        left: 25%;
-        margin-top: 3rem;
-        width: 25%; } }
   .popup__right {
     width: 66.666%;
     display: table-cell;
@@ -688,6 +679,7 @@ body {
     display: block;
     width: 100%; }
   .popup__text {
+    text-align: left;
     font-size: 1.4rem;
     margin-bottom: 4rem;
     -moz-column-count: 2;
