--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -99,7 +99,7 @@
 
 .btn-center {
   position: absolute;
-  left:30%;
+  left:0;
   margin-bottom: 2rem;
   text-align: center;
 }
