--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -34,24 +34,12 @@
     overflow: hidden;
     opacity: 0;
     transition: all .5s;
-
-    @include respond(phone) {
-      display: inline-block;
-    }
   }
 
   &__left {
     width: 33.3333%;
     display: table-cell;
     vertical-align: middle;
-
-    @include respond(phone) {
-      display: inline-flex;
-      position: relative;
-      left:25%;
-      margin-top:3rem;
-      width: 25%;
-    }
   }
 
   &__right {
@@ -67,6 +55,7 @@
   }
 
   &__text {
+    text-align: left;
     font-size: 1.4rem;
     margin-bottom: 4rem;
     -moz-column-count: 2;
